--- a/CadCliente/Views/Clientes/Create.cshtml
+++ b/CadCliente/Views/Clientes/Create.cshtml
@@ -45,7 +45,7 @@
                     <div class="col-md-3">
                         <div class="form-group">
                             <label asp-for="RG" class="control-label"></label>
-                            <input asp-for="RG" class="form-control" />
+                            <input asp-for="RG" id="RG" class="form-control" />
                             <span asp-validation-for="RG" class="text-danger"></span>
                         </div>
                     </div>
@@ -98,7 +98,7 @@
                     <div class="col-md-2">
                         <div class="form-group">
                             <label asp-for="CEP" class="control-label"></label>
-                            <input asp-for="CEP" class="form-control" />
+                            <input asp-for="CEP" id="CEP" class="form-control" />
                             <span asp-validation-for="CEP" class="text-danger"></span>
                         </div>
                     </div>
