--- a/CadCliente/Views/Clientes/Index.cshtml
+++ b/CadCliente/Views/Clientes/Index.cshtml
@@ -14,6 +14,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.Id)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Nome)
             </th>
             <th>
@@ -59,6 +62,9 @@
 @foreach (var item in Model) {
     <tr>
         <td>
+            @Html.DisplayFor(modelItem => item.Id)
+        </td>
+        <td>
             @Html.DisplayFor(modelItem => item.Nome)
         </td>
         <td>
@@ -89,7 +95,7 @@
             @Html.DisplayFor(modelItem => item.Pais)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.CEP)
+            @Html.Raw(String.Format("{0:#####-###}", long.Parse(item.CEP)))
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.NomePai)
